--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Stats/Action.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Stats/Action.cshtml
@@ -1,19 +1,29 @@
 ﻿@model DirectAgents.Web.Areas.ProgAdmin.Models.TDStatsVM
 
 @section scripts {
+@if (!Model.CustomDates)
+{
 <script>
     function ChangeMonth(month) {
-        var url = '@Html.Raw(Url.Action(null, new { platform = Model.PlatformCode, campId = Model.CampaignId, acctId = Model.AccountId, stratId = Model.StratId, month = "monthVal" }))';
-        location.href = url.replace('monthVal', month);
+        var url = '@Html.Raw(Url.Action(null, new { platform = Model.PlatformCode, campId = Model.CampaignId, acctId = Model.AccountId, stratId = Model.StratId, start = "startVal" }))';
+        location.href = url.replace('startVal', month);
     }
 </script>
 }
+}
 <h2>External Accounts - Action Stats</h2>
+@if (Model.CustomDates)
+{
+    <div>Dates: @Model.StartString - @Model.EndString</div>
+}
+else
+{
 <div style="margin-bottom:10px">
 <form>
     @Html.DropDownList("month", (SelectList)ViewBag.ChooseMonthSelectList, new { onchange = "ChangeMonth(this.value)" })
 </form>
 </div>
+}
 
 @if (Model.StratId.HasValue)
 {
