--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Stats/Strategy.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Stats/Strategy.cshtml
@@ -1,19 +1,29 @@
 ﻿@model DirectAgents.Web.Areas.ProgAdmin.Models.TDStatsVM
 
 @section scripts {
+@if (!Model.CustomDates)
+{
 <script>
     function ChangeMonth(month) {
-        var url = '@Html.Raw(Url.Action(null, new { platform = Model.PlatformCode, campId = Model.CampaignId, acctId = Model.AccountId, month = "monthVal" }))';
-        location.href = url.replace('monthVal', month);
+        var url = '@Html.Raw(Url.Action(null, new { platform = Model.PlatformCode, campId = Model.CampaignId, acctId = Model.AccountId, start = "startVal" }))';
+        location.href = url.replace('startVal', month);
     }
 </script>
 }
+}
 <h2>External Accounts - Raw Stats, by strategy</h2>
+@if (Model.CustomDates)
+{
+    <div>Dates: @Model.StartString - @Model.EndString</div>
+}
+else
+{
 <div style="margin-bottom:10px">
 <form>
     @Html.DropDownList("month", (SelectList)ViewBag.ChooseMonthSelectList, new { onchange = "ChangeMonth(this.value)" })
 </form>
 </div>
+}
 
 <table>
 <tr>
@@ -39,8 +49,8 @@
 {
 <tr>
     <td>
-        @Html.ActionLink("adset", "AdSet", new { acctId = Model.AccountId, stratId = stat.Strategy.Id, month = Model.MonthString })
-        @Html.ActionLink("action", "Action", new { acctId = Model.AccountId, stratId = stat.Strategy.Id, month = Model.MonthString })
+        @Html.ActionLink("adset", "AdSet", new { acctId = Model.AccountId, stratId = stat.Strategy.Id, start = Model.StartString, end = Model.EndString })
+        @Html.ActionLink("action", "Action", new { acctId = Model.AccountId, stratId = stat.Strategy.Id, start = Model.StartString, end = Model.EndString })
     </td>
     <td>(@stat.Strategy.ExtAccount.Platform.Name) @stat.Strategy.ExtAccount.Name</td>
     <td style="text-align:right">@stat.Strategy.Id</td>
