--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/SearchAdmin/Views/SearchAccounts/IndexGauge.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/SearchAdmin/Views/SearchAccounts/IndexGauge.cshtml
@@ -78,7 +78,7 @@ else if (oneProfile)
         <input type="submit" value="Sync" onclick="DoSync()" />
         <br /><br />
         Go to:
-        @Html.ActionLink("SearchAccounts", "Index", new { spId = @spId }) |
+        @Html.ActionLink("SearchAccounts(Edit)", "Index", new { spId = @spId }) |
         @Html.ActionLink("Generate Spreadsheet", "GenerateSpreadsheet", "Old", new { spId = @spId }, null)
         <br /><br />
         @Html.ActionLink("Back to SearchProfiles", "Index", "SearchProfiles")
