--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/SearchAdmin/Views/SearchCampaigns/IndexGauge.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/SearchAdmin/Views/SearchCampaigns/IndexGauge.cshtml
@@ -21,7 +21,7 @@
             <td style="text-align:right">@sc.SearchCampaignId</td>
             <td>@sc.SearchCampaignName</td>
             <td style="text-align:center">@sc.MinDaySum.ToShortDateString() - @sc.MaxDaySum.ToShortDateString()</td>
-            <td style="text-align:center">@sc.MinConvSum.ToShortDateString() - @sc.MaxConvSum.ToShortDateString()</td>
+            <td style="text-align:center">@Html.ActionLink(sc.MinConvSum.ToShortDateString() + " - " + sc.MaxConvSum.ToShortDateString(), "IndexGauge", "SearchConvTypes", new { scId = sc.SearchCampaignId }, null)</td>
             <td style="text-align:center">@sc.MinCallSum.ToShortDateString() - @sc.MaxCallSum.ToShortDateString()</td>
             <td>
                 @Html.ActionLink("Edit-", "Edit", new { id = sc.SearchCampaignId })
