--- a/1/EomTool/EomToolWeb/Views/Admin/Index.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Admin/Index.cshtml
@@ -25,6 +25,7 @@ List: @Html.ActionLink("Analysts", "Index", "Analysts"), @Html.ActionLink("Analy
 @Html.ActionLink("Extra Item Importer", "Import", "ExtraItems")<br />
 <br />
 @Html.ActionLink("Advertiser Maintenance", "AdvertiserMaintenance", "Admin")<br />
+@Html.ActionLink("Campaign Maintenance", "CampaignMaintenance", "Admin")<br />
 @Html.ActionLink("Affiliate Maintenance", "AffiliateMaintenance", "Admin")<br />
 @Html.ActionLink("Settings", "Settings", "Admin")<br />
 <br />
