--- a/1/EomTool/EomToolWeb/Views/Advertisers/Show.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Advertisers/Show.cshtml
@@ -17,6 +17,10 @@
             <td class="bold">@Html.DisplayFor(m => m.name)</td>
         </tr>
         <tr>
+            <td>@Html.LabelFor(m => m.alt_name)</td>
+            <td class="bold">@Html.DisplayFor(m => m.alt_name)</td>
+        </tr>
+        <tr>
             <td>@Html.LabelFor(m => m.status)</td>
             <td class="bold">@Html.DisplayFor(m => m.status)</td>
         </tr>
