--- a/1/EomTool/EomToolWeb/Views/Synch/Index.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Synch/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SynchVM
 
-Accounting Period: <b>@Model.CurrentEomDateString</b>
+<span>Accounting Period: </span><b>@Model.CurrentEomDateString</b>
 <br /><br />
 
 <h2>Synch CPCs</h2>
