--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/Cake/Views/Shared/_LayoutCake.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/Cake/Views/Shared/_LayoutCake.cshtml
@@ -57,7 +57,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="@Url.Action("Index", "Advertisers")">Advertisers</a></li>
+                            <li><a href="@Url.Action("IndexGauge", "Advertisers")">Advertisers</a></li>
                         </ul>
                     </li>
                 </ul>
