--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/Cake/Views/Conversions/AffSum.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/Cake/Views/Conversions/AffSum.cshtml
@@ -1,12 +1,15 @@
 ﻿@model IEnumerable<IGrouping<DirectAgents.Domain.Entities.Cake.Affiliate, DirectAgents.Domain.Entities.Cake.EventConversion>>
 @{
-    ViewBag.Title = "AffSum";
+    ViewBag.Title = "Affiliate Summary";
     var offer = (DirectAgents.Domain.Entities.Cake.Offer)ViewBag.Offer;
     string offerIdString = (offer != null ? offer.OfferId.ToString() : "");
 }
-<h2>Affiliate Summary</h2>
+<h2>@ViewBag.Title</h2>
 
 @if (offer != null) {
+    if (offer.Advertiser != null) {
+        <text>Advertiser: </text>@offer.Advertiser.AdvertiserName<br />
+    }
     <text>Offer: </text>@offer.OfferName<br />
 }
 
