--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/Cake/Views/Conversions/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/Cake/Views/Conversions/Index.cshtml
@@ -1,12 +1,15 @@
 ﻿@model IEnumerable<DirectAgents.Domain.Entities.Cake.EventConversion>
 @{
-    ViewBag.Title = "EventConversions";
+    ViewBag.Title = "Event-Conversions";
     var offer = (DirectAgents.Domain.Entities.Cake.Offer)ViewBag.Offer;
     var affiliate = (DirectAgents.Domain.Entities.Cake.Affiliate)ViewBag.Affiliate;
 }
-<h2>EventConversions</h2>
+<h2>@ViewBag.Title</h2>
 
 @if (offer != null) {
+    if (offer.Advertiser != null) {
+        <text>Advertiser: </text>@offer.Advertiser.AdvertiserName<br />
+    }
     <text>Offer: </text>@offer.OfferName<br />
 }
 @if (affiliate != null) {
