--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/Cake/Views/Conversions/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/Cake/Views/Conversions/Index.cshtml
@@ -44,10 +44,10 @@
             @Html.DisplayFor(x => conv.Id)
         </td>
         <td style="white-space:nowrap">
-            @Html.DisplayFor(x => conv.ConvDate)
+            @conv.ConvDate
         </td>
         <td style="white-space:nowrap">
-            @Html.DisplayFor(x => conv.ClickDate)
+            @conv.ClickDate
         </td>
         <td>
             @Html.DisplayFor(x => conv.Event.Name)
