--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/Cake/Views/Advertisers/IndexGauge.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/Cake/Views/Advertisers/IndexGauge.cshtml
@@ -8,7 +8,8 @@
     <tr>
         <th colspan="3"></th>
         <th colspan="2">CampSums</th>
-        <th colspan="2">EventConvs</th>
+        <th colspan="3">EventConvs...</th>
+        <th colspan="2">Sync (EventConvs)</th>
     </tr>
     <tr>
         <th>ID</th>
@@ -16,8 +17,11 @@
         <th>#Offers</th>
         <th>Earliest</th>
         <th>Latest</th>
+        <th style="text-align:center">#</th>
         <th>Earliest</th>
         <th>Latest</th>
+        <th>MTD</th>
+        <th>today</th>
     </tr>
     @foreach (var gauge in Model)
     {
@@ -28,8 +32,35 @@
             <td style="text-align:center">@Html.ActionLink(adv.Offers.Count().ToString(), "Index", "Offers", new { advId = adv.AdvertiserId }, null)</td>
             <td>@Html.DisplayFor(x => gauge.CampSums.Earliest)</td>
             <td>@Html.DisplayFor(x => gauge.CampSums.Latest)</td>
+            <td style="text-align:right">@adv.Offers.SelectMany(o => o.EventConversions).Count()</td>
             <td>@Html.DisplayFor(x => gauge.EventConvs.Earliest)</td>
             <td>@Html.DisplayFor(x => gauge.EventConvs.Latest)</td>
+            <td>
+                <div id="divCmds1_@(adv.AdvertiserId)" class="divCmds divCmds1">
+                    @Html.ActionLink("clear", "ClearConvs", new { id = adv.AdvertiserId }, new { onclick = "DoClear(" + adv.AdvertiserId + ", 1)" }) |
+                    @Html.ActionLink("load", "LoadConvs", new { id = adv.AdvertiserId }, new { onclick="DoLoad(" + adv.AdvertiserId + ", 1)" })
+                </div>
+            </td>
+            <td>
+                <div id="divCmds2_@(adv.AdvertiserId)" class="divCmds divCmds2">
+                    @Html.ActionLink("clear", "ClearConvs", new { id = adv.AdvertiserId, justToday = true }, new { onclick = "DoClear(" + adv.AdvertiserId + ", 2)" }) |
+                    @Html.ActionLink("load", "LoadConvs", new { id = adv.AdvertiserId, justToday = true }, new { onclick = "DoLoad(" + adv.AdvertiserId + ", 2)" })
+                </div>
+            </td>
         </tr>
     }
 </table>
+
+<script>
+    function DoClear(id, cmdCol) {
+        DoCmd(id, cmdCol, "Clearing....");
+    }
+    function DoLoad(id, cmdCol) {
+        DoCmd(id, cmdCol, "Loading....");
+    }
+    function DoCmd(id, cmdCol, cmdText) {
+        $('.divCmds').html("clear | load");
+        $('.divCmds' + cmdCol).empty();
+        $('#divCmds' + cmdCol + '_' + id).html(cmdText).css('color', 'red');
+    }
+</script>
