--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/Cake/Views/Advertisers/IndexGauge.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/Cake/Views/Advertisers/IndexGauge.cshtml
@@ -10,6 +10,7 @@
     <tr>
         <th colspan="3"></th>
         <th colspan="4">Convs(MTD) - CampSums</th>
+        <th colspan="2">Sync (CampSums)</th>
         <th colspan="3">EventConvs...</th>
         <th colspan="2">Sync (EventConvs)</th>
     </tr>
@@ -21,7 +22,9 @@
         <th>Paid</th>
         <th>Earliest</th>
         <th>Latest</th>
-        <th style="text-align:center">#</th>
+        <th>MTD</th>
+        <th>today</th>
+        <th style="text-align:center">#(MTD)</th>
         <th>Earliest</th>
         <th>Latest</th>
         <th>MTD</th>
@@ -30,28 +33,39 @@
     @foreach (var gauge in Model)
     {
         var adv = gauge.Advertiser;
-        var campsumsMTD = adv.Offers.SelectMany(o => o.Camps).SelectMany(c => c.CampSums).Where(cs => cs.Date >= monthStart);
         <tr>
             <td>@adv.AdvertiserId</td>
             <td>@adv.AdvertiserName</td>
             <td style="text-align:center">@Html.ActionLink(adv.Offers.Count().ToString(), "Index", "Offers", new { advId = adv.AdvertiserId }, null)</td>
-            <td style="text-align:right">@((int)campsumsMTD.Sum(x => x.Conversions))</td>
-            <td style="text-align:right">@((int)campsumsMTD.Sum(x => x.Paid))</td>
+            <td style="text-align:right">@gauge.CampSums.NumConvs.ToString("0.###")</td>
+            <td style="text-align:right">@gauge.CampSums.NumConvsPaid.ToString("0.###")</td>
             <td>@Html.DisplayFor(x => gauge.CampSums.Earliest)</td>
             <td>@Html.DisplayFor(x => gauge.CampSums.Latest)</td>
-            <td style="text-align:right">@adv.Offers.SelectMany(o => o.EventConversions).Count()</td>
-            <td>@Html.DisplayFor(x => gauge.EventConvs.Earliest)</td>
-            <td>@Html.DisplayFor(x => gauge.EventConvs.Latest)</td>
             <td>
                 <div id="divCmds1_@(adv.AdvertiserId)" class="divCmds divCmds1">
-                    @Html.ActionLink("clear", "ClearConvs", new { id = adv.AdvertiserId }, new { onclick = "DoClear(" + adv.AdvertiserId + ", 1)" }) |
-                    @Html.ActionLink("load", "LoadConvs", new { id = adv.AdvertiserId }, new { onclick="DoLoad(" + adv.AdvertiserId + ", 1)" })
+                    @Html.ActionLink("clear", "ClearCampSums", new { id = adv.AdvertiserId }, new { onclick = "DoClear(" + adv.AdvertiserId + ", 1)" }) |
+                    @Html.ActionLink("load", "LoadCampSums", new { id = adv.AdvertiserId }, new { onclick = "DoLoad(" + adv.AdvertiserId + ", 1)" })
                 </div>
             </td>
             <td>
                 <div id="divCmds2_@(adv.AdvertiserId)" class="divCmds divCmds2">
-                    @Html.ActionLink("clear", "ClearConvs", new { id = adv.AdvertiserId, justToday = true }, new { onclick = "DoClear(" + adv.AdvertiserId + ", 2)" }) |
-                    @Html.ActionLink("load", "LoadConvs", new { id = adv.AdvertiserId, justToday = true }, new { onclick = "DoLoad(" + adv.AdvertiserId + ", 2)" })
+                    @Html.ActionLink("clear", "ClearCampSums", new { id = adv.AdvertiserId, justToday = true }, new { onclick = "DoClear(" + adv.AdvertiserId + ", 2)" }) |
+                    @Html.ActionLink("load", "LoadCampSums", new { id = adv.AdvertiserId, justToday = true }, new { onclick = "DoLoad(" + adv.AdvertiserId + ", 2)" })
+                </div>
+            </td>
+            <td style="text-align:right">@gauge.EventConvs.NumConvs.ToString("0.###")</td>
+            <td>@Html.DisplayFor(x => gauge.EventConvs.Earliest)</td>
+            <td>@Html.DisplayFor(x => gauge.EventConvs.Latest)</td>
+            <td>
+                <div id="divCmds3_@(adv.AdvertiserId)" class="divCmds divCmds3">
+                    @Html.ActionLink("clear", "ClearConvs", new { id = adv.AdvertiserId }, new { onclick = "DoClear(" + adv.AdvertiserId + ", 3)" }) |
+                    @Html.ActionLink("load", "LoadConvs", new { id = adv.AdvertiserId }, new { onclick="DoLoad(" + adv.AdvertiserId + ", 3)" })
+                </div>
+            </td>
+            <td>
+                <div id="divCmds4_@(adv.AdvertiserId)" class="divCmds divCmds4">
+                    @Html.ActionLink("clear", "ClearConvs", new { id = adv.AdvertiserId, justToday = true }, new { onclick = "DoClear(" + adv.AdvertiserId + ", 4)" }) |
+                    @Html.ActionLink("load", "LoadConvs", new { id = adv.AdvertiserId, justToday = true }, new { onclick = "DoLoad(" + adv.AdvertiserId + ", 4)" })
                 </div>
             </td>
         </tr>
