--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/Cake/Views/Camps/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/Cake/Views/Camps/Index.cshtml
@@ -24,7 +24,7 @@
         <th>Offer<br />Contract</th>
         <th>Payout</th>
         <th>Curr</th>
-        <th>#CampSums</th>
+        <th style="text-align:center">#CampSums<br />(MTD)</th>
     </tr>
 @foreach (var camp in Model)
 {
