--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/Cake/Views/Advertisers/IndexGauge.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/Cake/Views/Advertisers/IndexGauge.cshtml
@@ -13,6 +13,7 @@
         <th colspan="3"></th>
         <th colspan="4">Convs(MTD) - CampSums</th>
         <th colspan="2">Sync (CampSums)</th>
+        <th colspan="5">Convs(MTD) - AffSubSums</th>
         <th colspan="3">EventConvs...</th>
         <th colspan="2">Sync (EventConvs)</th>
     </tr>
@@ -26,6 +27,11 @@
         <th>Latest</th>
         <th>MTD</th>
         <th>today</th>
+        <th style="text-align:center">#</th>
+        <th>Paid</th>
+        <th>Earliest</th>
+        <th>Latest</th>
+        <th>Sync- today</th>
         <th style="text-align:center">#(MTD)</th>
         <th>Earliest</th>
         <th>Latest</th>
@@ -58,21 +64,33 @@
                     @Html.ActionLink("load", "LoadCampSums", new { id = adv.AdvertiserId, justToday = true }, new { onclick = "DoLoad(" + adv.AdvertiserId + ", 2)" })
                 </div>
             </td>
+            <td style="text-align:right">@gauge.AffSubSums.NumConvs.ToString(formatNum)</td>
+            <td style="text-align:right">@gauge.AffSubSums.NumConvsPaid.ToString(formatNum)</td>
+            <td>@Html.DisplayFor(x => gauge.AffSubSums.Earliest)</td>
+            <td>@Html.DisplayFor(x => gauge.AffSubSums.Latest)</td>
+            <td>
+                <div id="divCmds3_@(adv.AdvertiserId)" class="divCmds divCmds3">
+@if (!isTotal || super) {
+                    @Html.ActionLink("clear", "ClearAffSubSums", new { id = adv.AdvertiserId, justToday = true }, new { onclick = "DoClear(" + adv.AdvertiserId + ", 3)" })<text> |</text>
+                    @Html.ActionLink("load", "LoadAffSubSums", new { id = adv.AdvertiserId, justToday = true }, new { onclick = "DoLoad(" + adv.AdvertiserId + ", 3)" })
+}
+                </div>
+            </td>
             <td style="text-align:right">@gauge.EventConvs.NumConvs.ToString(formatNum)</td>
             <td>@Html.DisplayFor(x => gauge.EventConvs.Earliest)</td>
             <td>@Html.DisplayFor(x => gauge.EventConvs.Latest)</td>
             <td>
-                <div id="divCmds3_@(adv.AdvertiserId)" class="divCmds divCmds3">
+                <div id="divCmds4_@(adv.AdvertiserId)" class="divCmds divCmds4">
 @if (!isTotal || super) {
-                    @Html.ActionLink("clear", "ClearConvs", new { id = adv.AdvertiserId }, new { onclick = "DoClear(" + adv.AdvertiserId + ", 3)" })<text> |</text>
-                    @Html.ActionLink("load", "LoadConvs", new { id = adv.AdvertiserId }, new { onclick="DoLoad(" + adv.AdvertiserId + ", 3)" })
+                    @Html.ActionLink("clear", "ClearConvs", new { id = adv.AdvertiserId }, new { onclick = "DoClear(" + adv.AdvertiserId + ", 4)" })<text> |</text>
+                    @Html.ActionLink("load", "LoadConvs", new { id = adv.AdvertiserId }, new { onclick="DoLoad(" + adv.AdvertiserId + ", 4)" })
 }
                 </div>
             </td>
             <td>
-                <div id="divCmds4_@(adv.AdvertiserId)" class="divCmds divCmds4">
-                    @Html.ActionLink("clear", "ClearConvs", new { id = adv.AdvertiserId, justToday = true }, new { onclick = "DoClear(" + adv.AdvertiserId + ", 4)" }) |
-                    @Html.ActionLink("load", "LoadConvs", new { id = adv.AdvertiserId, justToday = true }, new { onclick = "DoLoad(" + adv.AdvertiserId + ", 4)" })
+                <div id="divCmds4_@(adv.AdvertiserId)" class="divCmds divCmds5">
+                    @Html.ActionLink("clear", "ClearConvs", new { id = adv.AdvertiserId, justToday = true }, new { onclick = "DoClear(" + adv.AdvertiserId + ", 5)" }) |
+                    @Html.ActionLink("load", "LoadConvs", new { id = adv.AdvertiserId, justToday = true }, new { onclick = "DoLoad(" + adv.AdvertiserId + ", 5)" })
                 </div>
             </td>
         </tr>
